TL-10139 theme_roots: Correct layout of filepicker on small displays.
Reviewed-on: https://review.totaralms.com/12979
Tested-by: Sam Hemelryk <sam.hemelryk@totaralearning.com>

--- a/theme/roots/less/totara/filemanager.less
+++ b/theme/roots/less/totara/filemanager.less
@@ -121,7 +121,7 @@
 .file-picker .fp-repo-items {
   float: none;
   width: auto;
-  margin-left:181px;
+  margin-left: 0;
 }
 .dir-rtl .moodle-dialogue-fullscreen .file-picker .fp-repo-items {
   margin-left: 0px;
